# SPD

./: CMakeLists.txt  Makefile  README.md  dane.txt  dane1.txt  dane2.txt
inc/: Problem.hpp  Zadanie.hpp
src/: Problem.cpp  Zadanie.cpp  main.cpp
